[TASK] update CE-s templates

--- a/Resources/Private/Templates/ContentElements/Static/Audio.html
+++ b/Resources/Private/Templates/ContentElements/Static/Audio.html
@@ -3,13 +3,15 @@
 <f:layout name="Default" />
 
 <f:section name="Main">
+<!-- t3kit: Resources/Private/Templates/ContentElements/Static/Audio.html [begin] -->
 
-  <div class="audio-ce">
-    <div class="audio-ce__wrp">
+  <div class="ce-audio__wrp">
+    <div class="ce-audio">
       <f:render partial="Media/Figure" arguments="{_all}" />
     </div>
   </div>
 
+<!-- t3kit: Resources/Private/Templates/ContentElements/Static/Audio.html [end] -->
 </f:section>
 
 </html>
