--- a/Resources/Private/Templates/ContentElements/Static/Video.html
+++ b/Resources/Private/Templates/ContentElements/Static/Video.html
@@ -3,13 +3,15 @@
 <f:layout name="Default" />
 
 <f:section name="Main">
+<!-- t3kit: Resources/Private/Templates/ContentElements/Static/Video.html [begin] -->
 
-  <div class="video-ce">
-    <div class="video-ce__wrp">
+  <div class="ce-video">
+    <div class="ce-video__wrp">
       <f:render partial="Media/Figure" arguments="{_all}" />
     </div>
   </div>
 
+<!-- t3kit: Resources/Private/Templates/ContentElements/Static/Video.html [end] -->
 </f:section>
 
 </html>
