--- a/Resources/Private/Templates/ContentElements/Static/BigIconTextButton.html
+++ b/Resources/Private/Templates/ContentElements/Static/BigIconTextButton.html
@@ -5,39 +5,43 @@
 <f:section name="Header" />
 
 <f:section name="Main">
-  <div class="big-icon-text-btn__wrp">
-    <div class="big-icon-text-btn {f:if(condition: settings.disableWholeAreaLink, then: '', else: ' _whole-area-link')}">
+<!-- t3kit: Resources/Private/Templates/ContentElements/Static/BigIconTextButton.html [begin] -->
+
+  <div class="ce-big-icon-text-btn__wrp">
+    <div class="ce-big-icon-text-btn {f:if(condition: settings.disableWholeAreaLink, then: '', else: ' _whole-area-link')}">
       <f:if condition="{data.icon}">
-        <span class="big-icon-text-btn__icon">
+        <span class="ce-big-icon-text-btn__icon">
           <t3kit:render.svg src="{data.icon}" class="{data.icon_class}" width="55px" height="55px" aria-hidden="true" />
         </span>
       </f:if>
 
       <f:if condition="{data.header}">
-        <h3 class="big-icon-text-btn__header">
+        <h3 class="ce-big-icon-text-btn__header">
           {data.header}
         </h3>
       </f:if>
 
       <f:if condition="{data.bodytext}">
-        <p class="big-icon-text-btn__p"><f:format.nl2br>{data.bodytext}</f:format.nl2br></p>
+        <p class="ce-big-icon-text-btn__p"><f:format.nl2br>{data.bodytext}</f:format.nl2br></p>
       </f:if>
 
       <f:if condition="{data.link} && {flexform.disableWholeAreaLink} == 1">
         <f:link.typolink
           parameter="{data.link}"
-          class="big-icon-text-btn__link {f:if(condition: flexform.btnAsLink, then: 'btn-text', else: ' btn btn-primary')}">
+          class="ce-big-icon-text-btn__link {f:if(condition: flexform.btnAsLink, then: 'btn-text', else: ' btn btn-primary')}">
             {f:if(condition: data.link_title, then: data.link_title, else: data.header)}
         </f:link.typolink>
       </f:if>
 
       <f:if condition="{flexform.disableWholeAreaLink} == 0">
-          <f:link.typolink parameter="{data.link}" class="big-icon-text-btn__link _whole-area-link stretched-link {f:if(condition: flexform.btnAsLink, then: 'btn-text', else: ' btn btn-primary')}">
+          <f:link.typolink parameter="{data.link}" class="ce-big-icon-text-btn__link _whole-area-link stretched-link {f:if(condition: flexform.btnAsLink, then: 'btn-text', else: ' btn btn-primary')}">
             {f:if(condition: data.link_title, then: data.link_title, else: data.header)}
           </f:link.typolink>
       </f:if>
     </div>
   </div>
+
+<!-- t3kit: Resources/Private/Templates/ContentElements/Static/BigIconTextButton.html [end] -->
 </f:section>
 
 
