--- a/Resources/Private/Templates/ContentElements/Static/Div.html
+++ b/Resources/Private/Templates/ContentElements/Static/Div.html
@@ -1,10 +1,17 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+
 <f:layout name="Default" />
+
 <f:section name="Header" />
+
 <f:section name="Main">
+<!-- t3kit: Resources/Private/Templates/ContentElements/Static/Div.html [begin] -->
 
-  <hr class="div" />
+  <div class="ce-div__wrp">
+    <hr class="ce-div" />
+  </div>
 
+<!-- t3kit: Resources/Private/Templates/ContentElements/Static/Div.html [end] -->
 </f:section>
 
 </html>
