--- a/Resources/Private/Templates/ContentElements/Static/ImageTextLink.html
+++ b/Resources/Private/Templates/ContentElements/Static/ImageTextLink.html
@@ -5,6 +5,8 @@
 <f:section name="Header" />
 
 <f:section name="Main">
+<!-- t3kit: Resources/Private/Templates/ContentElements/Static/ImageTextLink.html [begin] -->
+
   <f:if condition="{flexform.disableWholeAreaLink} == 1">
     <f:then>
       <f:render section="Content" arguments="{_all}" />
@@ -15,16 +17,18 @@
       </f:link.typolink>
     </f:else>
   </f:if>
+
+<!-- t3kit: Resources/Private/Templates/ContentElements/Static/ImageTextLink.html [end] -->
 </f:section>
 
 <f:section name="Content">
-  <div class="img-text-link__wrp">
-    <div class="img-text-link{f:if(condition: '{flexform.hoverEffect} == 0', then: '', else: ' _hover-{flexform.hoverEffect}')}">
+  <div class="ce-img-text-link__wrp">
+    <div class="ce-img-text-link{f:if(condition: '{flexform.hoverEffect} == 0', then: '', else: ' _hover-{flexform.hoverEffect}')}">
       <f:if condition="{image}">
         <f:comment><!-- don't link image if whole CE is linked --></f:comment>
         <f:if condition="{image.0.link} && {flexform.disableWholeAreaLink} == 1">
           <f:then>
-            <f:link.typolink title="{image.0.title}" class="img-text-link__img-link" parameter="{image.0.link}">
+            <f:link.typolink title="{image.0.title}" class="ce-img-text-link__img-link" parameter="{image.0.link}">
               <f:render section="media" arguments="{_all}" />
             </f:link.typolink>
           </f:then>
@@ -38,7 +42,7 @@
         <f:render partial="Header/Header" arguments="{
           header: '{data.header}',
           layout: '{data.header_layout}',
-          positionClass: 'img-text-link__header',
+          positionClass: 'ce-img-text-link__header',
           link: ''
         }" />
       </f:if>
@@ -49,10 +53,10 @@
             <f:comment>
               <!-- can't allow frontend-editing since js crops the text -->
             </f:comment>
-            <p class="img-text-link__p js__img-text-link"><f:format.nl2br>{data.bodytext}</f:format.nl2br></p>
+            <p class="ce-img-text-link__p js__ce-img-text-link"><f:format.nl2br>{data.bodytext}</f:format.nl2br></p>
           </f:then>
           <f:else>
-            <p class="img-text-link__p"><f:format.nl2br>{data.bodytext}</f:format.nl2br></p>
+            <p class="ce-img-text-link__p"><f:format.nl2br>{data.bodytext}</f:format.nl2br></p>
           </f:else>
         </f:if>
       </f:if>
@@ -67,18 +71,19 @@
 
       <f:if condition="{flexform.disableWholeAreaLink} == 0 && flexform.hoverEffect} == 0">
         <span
-          class="img-text-link__sham-link{f:if(condition: flexform.linkAsBtn, then: ' btn btn-default', else: '')}"
+          class="ce-img-text-link__sham-link{f:if(condition: flexform.linkAsBtn, then: ' btn btn-default', else: '')}"
           aria-hidden="true">
             {f:if(condition: data.link_title, then: data.link_title, else: data.header)}
         </span>
       </f:if>
     </div>
   </div>
+
 </f:section>
 
 <f:section name="media">
   <f:media file="{image.0}" width="{data.imagewidth}" height="{data.imageheight}" alt="{image.0.alternative}"
-    title="{image.0.title}" class="img-text-link__img img-responsive" />
+    title="{image.0.title}" class="ce-img-text-link__img img-responsive" />
 </f:section>
 
 </html>
