--- a/Resources/Private/Partials/ContentElements/Media/Type/Picture.html
+++ b/Resources/Private/Partials/ContentElements/Media/Type/Picture.html
@@ -4,7 +4,7 @@
     <f:if condition="{file.link}">
       <f:then>
         <f:link.typolink class="picture-partial__link" parameter="{file.link}" title="{file.title}">
-          <f:render partial="Media/Render/Picture" arguments="{data: data, image:file}" />
+          <f:render partial="Media/Render/Picture" arguments="{data: data, image:file, options:options}" />
         </f:link.typolink>
       </f:then>
 
@@ -14,13 +14,13 @@
           <f:then>
             <div class="picture-partial__zoom">
               <f:comment>TODO: add lightbox functionality</f:comment>
-              <f:render partial="Media/Render/Picture" arguments="{data: data, image:file}" />
+              <f:render partial="Media/Render/Picture" arguments="{data: data, image:file, options:options}" />
             </div>
           </f:then>
 
           <f:else>
             <div class="picture-partial__simple">
-              <f:render partial="Media/Render/Picture" arguments="{data: data, image:file}" />
+              <f:render partial="Media/Render/Picture" arguments="{data: data, image:file, options:options}" />
             </div>
           </f:else>
 
