--- a/Resources/Private/Partials/ContentElements/Media/Figure.html
+++ b/Resources/Private/Partials/ContentElements/Media/Figure.html
@@ -1,6 +1,6 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
-  <f:for each="{files}" as="file">
+<f:for each="{files}" as="file">
 
     <f:switch expression="{file.type}">
       <f:case value="3">
@@ -16,10 +16,12 @@
 
     <figure class="figure-partial figure figure-{type -> f:format.case(mode: 'lower')}">
 
-      <f:render partial="Media/Type/{type}" arguments="{data: data, file:file}" optional="1"/>
+      <f:render partial="Media/Type/{type}" arguments="{data: data, file:file, options:options}" optional="1"/>
 
       <f:if condition="{file.description}">
-        <figcaption class="figure-partial__caption figure-caption text-{file.referenceProperties.description_position}"><f:format.nl2br>{file.description}</f:format.nl2br></figcaption>
+        <figcaption class="figure-partial__caption figure-caption text-{file.referenceProperties.description_position}">
+          <f:format.nl2br>{file.description}</f:format.nl2br>
+        </figcaption>
       </f:if>
 
     </figure>
