--- a/Resources/Private/Partials/ContentElements/Media/Type/Video.html
+++ b/Resources/Private/Partials/ContentElements/Media/Type/Video.html
@@ -1,7 +1,7 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
   <div class="video-partial">
-    <f:render partial="Media/Render/Video" arguments="{data: data, file:file}" />
+    <f:render partial="Media/Render/Video" arguments="{data: data, file:file, options:options}" />
   </div>
 
 </html>
