[TASK] update button element, insert button partial to other CE-s

--- a/Resources/Private/Templates/ContentElements/Static/Button.html
+++ b/Resources/Private/Templates/ContentElements/Static/Button.html
@@ -7,6 +7,26 @@
 <f:section name="Main">
 <!-- t3kit: Resources/Private/Templates/ContentElements/Static/Button.html [begin] -->
 
+  <f:if condition="{data.link_title}">
+    <div class="ce-button">
+      <f:if condition="{data.link_as_button}">
+        <f:then>
+          <f:render partial="Links/ButtonLink" arguments="{_all}" />
+        </f:then>
+        <f:else>
+          <f:render partial="Links/Link" arguments="{_all}" />
+        </f:else>
+      </f:if>
+    </div>
+  </f:if>
+
+<!-- t3kit: Resources/Private/Templates/ContentElements/Static/Button.html [end] -->
+</f:section>
+
+</html>
+
+
+<f:comment>
   <f:variable name="btn_class">btn</f:variable>
   <f:if condition="{flexform.button_no_bg}">
     <f:then>
@@ -30,8 +50,8 @@
     <f:variable name="btn_class">{btn_class} {flexform.button_size}</f:variable>
   </f:if>
 
-  <f:if condition="{flexform.button_block}">
-    <f:variable name="btn_class">{btn_class} btn-block</f:variable>
+  <f:if condition="{flexform.button_full_width}">
+    <f:variable name="btn_class">{btn_class} w-100</f:variable>
   </f:if>
 
   <f:if condition="{data.link_title}">
@@ -39,8 +59,4 @@
       <f:link.typolink parameter="{data.link}" class="ce-button {btn_class}">{data.link_title}</f:link.typolink>
     </div>
   </f:if>
-
-<!-- t3kit: Resources/Private/Templates/ContentElements/Static/Button.html [end] -->
-</f:section>
-
-</html>
+</f:comment>
