--- a/theme/src/styles/content-elements/hero-image/_index.scss
+++ b/theme/src/styles/content-elements/hero-image/_index.scss
@@ -21,351 +21,107 @@
 @use '../../bootstrap/mixins' as mixin;
 @use '../../helpers/line-clamp.scss';
 
-.hero-image {
+.ce-hero-image {
   position: relative;
-  display: inline-block;
-  // max-width: 1920px;
 }
 
-.hero-image__caption-wrp {
+.ce-hero-image .figure-partial {
+  display: block;
+}
+
+.ce-hero-image .picture-partial__item-img {
+  width: 100%;
+  object-fit: cover;
+  margin: 0;
+
+  @include mixin.media-breakpoint-down(sm) {
+    height: 360px;
+  }
+}
+
+.ce-hero-image__caption-wrp {
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
   top: 0;
-  right: 0;
-  bottom: 24px;
   left: 0;
-  z-index: 1;
+  height: 100%;
+  width: 100%;
 }
 
-.hero-image__caption {
-  padding: 15px;
-  color: var.$white;
-  overflow: hidden;
+.ce-hero-image__caption {
   -webkit-font-smoothing: antialiased;
-
-  @include mixin.media-breakpoint-up(md) {
-    padding: 20px 60px;
-  }
 }
 
-.hero-image__caption-wrp._left-align .hero-image__caption {
-  margin-right: auto;
-  text-align: left;
+// .ce-hero-image__caption-header {
+
+// }
+
+// .ce-hero-image__caption-subheader {
+
+// }
+// .ce-hero-image__caption-bodytext {
+
+// }
+// .ce-hero-image__caption-link {
+
+// }
+
+// .ce-hero-image__caption-wrp._left-align .ce-hero-image__caption {
+//   margin-right: auto;
+//   text-align: left;
+// }
+
+// .ce-hero-image__caption-wrp._center-align .ce-hero-image__caption {
+//   text-align: center;
+// }
+
+// .ce-hero-image__caption-wrp._right-align .ce-hero-image__caption {
+//   margin-left: auto;
+//   text-align: right;
+// }
+
+// .ce-hero-image__caption._top {
+//   align-self: flex-start;
+// }
+
+// .ce-hero-image__caption._bottom {
+//   align-self: flex-end;
+// }
+
+// .ce-hero-image__caption-header {
+//   color: var.$white;
+//   margin-top: 5px;
+//   font-size: 1.6125rem;
+
+//   @include mixin.media-breakpoint-up(md) {
+//     font-size: 1.875rem;
+//   }
+// }
+
+// .ce-hero-image__caption-subheader {
+//   color: var.$white;
+//   // font-size: $font-size-h3 * 0.77;
+//   font-size: 1.155rem;
+
+//   @include mixin.media-breakpoint-up(md) {
+//     font-size: 1.5rem;
+//   }
+// }
+
+.ce-hero-image__caption-wrp--overlay-primary {
+  background-color: transparentize(var.$primary, 0.7);
 }
 
-.hero-image__caption-wrp._center-align .hero-image__caption {
-  text-align: center;
+.ce-hero-image__caption-wrp--overlay-secondary {
+  background-color: transparentize(var.$secondary, 0.7);
 }
 
-.hero-image__caption-wrp._right-align .hero-image__caption {
-  margin-left: auto;
-  text-align: right;
+.ce-hero-image__caption-wrp--overlay-dark {
+  background-color: transparentize(var.$dark, 0.7);
 }
 
-.hero-image__caption._top {
-  align-self: flex-start;
-}
-
-.hero-image__caption._bottom {
-  align-self: flex-end;
-}
-
-.hero-image__caption-header {
-  color: var.$white;
-  margin-top: 5px;
-  // font-size: $font-size-h2 * 0.86;
-  font-size: 1.6125rem;
-
-  @include mixin.media-breakpoint-up(md) {
-    font-size: 1.875rem;
-  }
-}
-
-.hero-image__caption-subheader {
-  color: var.$white;
-  // font-size: $font-size-h3 * 0.77;
-  font-size: 1.155rem;
-
-  @include mixin.media-breakpoint-up(md) {
-    font-size: 1.5rem;
-  }
-}
-
-.hero-image__caption-link {
-  padding: 10px 36px;
-  background: saturate(adjust-hue(var.$primary, 177), 30%);
-  border: 1px solid saturate(adjust-hue(var.$primary, 177), 30%);
-  color: var.$white;
-  margin-top: 10px;
-
-  &.active,
-  &:active {
-    &.focus,
-    &:focus {
-      outline: 0;
-      background-image: none;
-      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.2);
-      border-color: saturate(adjust-hue(var.$primary, 177), 18%);
-    }
-  }
-
-  &.focus,
-  &:focus,
-  &:hover,
-  &:active {
-    color: var.$white;
-    background-color: saturate(adjust-hue(var.$primary, 179), 30%);
-  }
-}
-
-.hero-image__caption-link:not(.btn) {
-  color: var.$white;
-  text-decoration: underline;
-}
-
-.slider-container._full-width .swiper-slide-next .hero-image__caption > * {
-  transition: none;
-}
-
-.frame-type-heroImage + .frame-type-heroImage {
-  display: none;
-}
-
-// @media (min-width: $screen-md-min) {
-.slider-container._full-width .swiper-button-next,
-.slider-container._full-width .swiper-button-prev {
-  @include mixin.media-breakpoint-up(lg) {
-    width: auto;
-    display: block;
-  }
-}
-
-//--------------------------------------------------//
-// animation style 1 -------------------------------//
-//--------------------------------------------------//
-
-.hero-image__caption._caption-animated-1 > * {
-  transition: all 0.5s ease;
-  opacity: 0;
-  -webkit-transform: translate3d(0, 30px, 0);
-  transform: translate3d(0, 30px, 0);
-}
-
-.hero-image__caption._caption-animated-1 .hero-image__caption-header {
-  transition-delay: 0.3s;
-}
-
-.hero-image__caption._caption-animated-1 .hero-image__caption-subheader {
-  transition-delay: 0.5s;
-}
-
-.hero-image__caption._caption-animated-1 .hero-image__caption-p {
-  transition-delay: 0.7s;
-}
-
-.hero-image__caption._caption-animated-1 .hero-image__caption-link-wrp {
-  transition-delay: 0.9s;
-}
-
-.swiper-slide-active .hero-image__caption._caption-animated-1 > * {
-  opacity: 1;
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-
-.hero-image._animated .hero-image__caption._caption-animated-1 > * {
-  opacity: 1;
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-
-//--------------------------------------------------//
-// animation style 2 -------------------------------//
-//--------------------------------------------------//
-
-.hero-image__caption._caption-animated-2 > * {
-  transition: all 1s ease;
-  opacity: 0;
-}
-
-.hero-image__caption._caption-animated-2 .hero-image__caption-header {
-  transition-delay: 0.3s;
-}
-
-.hero-image__caption._caption-animated-2 .hero-image__caption-subheader {
-  transition-delay: 0.7s;
-}
-
-.hero-image__caption._caption-animated-2 .hero-image__caption-p {
-  transition-delay: 1.1s;
-}
-
-.hero-image__caption._caption-animated-2 .hero-image__caption-link-wrp {
-  transition-delay: 1.4s;
-}
-
-.swiper-slide-active .hero-image__caption._caption-animated-2 > * {
-  opacity: 1;
-}
-
-.hero-image._animated .hero-image__caption._caption-animated-2 > * {
-  opacity: 1;
-}
-
-//--------------------------------------------------//
-// animation style 3 -------------------------------//
-//--------------------------------------------------//
-
-.hero-image__caption._caption-animated-3 > * {
-  transition: all 0.5s ease;
-  opacity: 0;
-  -webkit-transform: translate3d(0, -30px, 0);
-  transform: translate3d(0, -30px, 0);
-}
-
-.hero-image__caption._caption-animated-3 .hero-image__caption-header {
-  transition-delay: 0.9s;
-}
-
-.hero-image__caption._caption-animated-3 .hero-image__caption-subheader {
-  transition-delay: 0.7s;
-}
-
-.hero-image__caption._caption-animated-3 .hero-image__caption-p {
-  transition-delay: 0.5s;
-}
-
-.hero-image__caption._caption-animated-3 .hero-image__caption-link-wrp {
-  transition-delay: 0.3s;
-}
-
-.swiper-slide-active .hero-image__caption._caption-animated-3 > * {
-  opacity: 1;
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-
-.hero-image._animated .hero-image__caption._caption-animated-3 > * {
-  opacity: 1;
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-
-//--------------------------------------------------//
-// animation style 4 -------------------------------//
-//--------------------------------------------------//
-
-.hero-image__caption._caption-animated-4 > *:not(.hero-image__caption-link-wrp) {
-  position: relative;
-  color: transparent;
-  overflow: hidden;
-
-  &:after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    color: var.$white;
-    transition: all 0.6s ease-out;
-    transform: translateY(-100%);
-    opacity: 0;
-  }
-}
-
-.hero-image__caption._caption-animated-4 .hero-image__caption-header:after {
-  content: attr(data-header-content);
-  transition-delay: 1s;
-}
-
-.hero-image__caption._caption-animated-4 .hero-image__caption-subheader:after {
-  content: attr(data-subheader-content);
-  transition-delay: 0.8s;
-}
-
-.hero-image__caption._caption-animated-4 .hero-image__caption-p:after {
-  content: attr(data-text-content);
-  transition-delay: 0.6s;
-
-  @extend .line-clamp;
-}
-
-.hero-image__caption._caption-animated-4 .hero-image__caption-link-wrp {
-  transition: all 1s ease-out 0.6s;
-  opacity: 0;
-  transform: translateY(40px);
-}
-
-.swiper-slide-active .hero-image__caption._caption-animated-4 > *:not(.hero-image__caption-link-wrp):after {
-  transform: translateY(0);
-  opacity: 1;
-}
-
-.swiper-slide-active .hero-image__caption._caption-animated-4 .hero-image__caption-link-wrp {
-  transform: translateY(0);
-  opacity: 1;
-}
-
-.hero-image._animated .hero-image__caption._caption-animated-4 > *:not(.hero-image__caption-link-wrp):after {
-  transform: translateY(0);
-  opacity: 1;
-}
-
-.hero-image._animated .hero-image__caption._caption-animated-4 .hero-image__caption-link-wrp {
-  transform: translateY(0);
-  opacity: 1;
-}
-
-//--------------------------------------------------//
-// animation style 5 -------------------------------//
-//--------------------------------------------------//
-
-.hero-image__caption._caption-animated-5 > * {
-  transition: all 0.5s ease-in-out;
-  opacity: 0;
-}
-
-.hero-image__caption._caption-animated-5 .hero-image__caption-header {
-  transition-delay: 0.9s;
-  transform: translateY(-40px);
-}
-
-.hero-image__caption._caption-animated-5 .hero-image__caption-subheader {
-  transition-delay: 0.7s;
-  transform: translateY(-40px);
-}
-
-.hero-image__caption._caption-animated-5 .hero-image__caption-p {
-  transform: translateY(40px);
-  transition-delay: 0.7s;
-}
-
-.hero-image__caption._caption-animated-5 .hero-image__caption-link-wrp {
-  transition-delay: 0.9s;
-  transform: translateY(40px);
-}
-
-.hero-image._animated,
-.swiper-slide-active {
-  .hero-image__caption._caption-animated-5 .hero-image__caption-p,
-  .hero-image__caption._caption-animated-5 .hero-image__caption-link-wrp,
-  .hero-image__caption._caption-animated-5 .hero-image__caption-subheader,
-  .hero-image__caption._caption-animated-5 .hero-image__caption-header {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-.hero-image__caption-wrp._caption-overlay-1 {
-  background-color: transparentize(var.$primary, 0.8);
-}
-
-.hero-image__caption-wrp._caption-overlay-2 {
-  background-color: transparentize(var.$black, 0.8);
-}
-
-.hero-image__caption-wrp._caption-overlay-3 {
-  background-color: transparentize(var.$white, 0.8);
+.ce-hero-image__caption-wrp--overlay-light {
+  background-color: transparentize(var.$light, 0.7);
 }
