--- a/theme/src/styles/main.scss
+++ b/theme/src/styles/main.scss
@@ -9,7 +9,7 @@
 @use 'content-elements/footer';
 @use 'content-elements/big-icon-text-button';
 // @use 'content-elements/accordion';
-// @use 'content-elements/contacts-card';
+@use 'content-elements/contact-card';
 // @use 'content-elements/hero-image';
 @use 'content-elements/icon-text-button';
 @use 'content-elements/hero-image';
