--- a/Resources/Private/Templates/ContentElements/Static/HeroImage.html
+++ b/Resources/Private/Templates/ContentElements/Static/HeroImage.html
@@ -47,10 +47,10 @@
               <div class="ce-hero-image__caption-link">
                 <f:if condition="{data.link_as_button}">
                   <f:then>
-                    <f:render partial="Links/ButtonLink" arguments="{_all}" />
+                    <f:render partial="Link/ButtonLink" arguments="{_all}" />
                   </f:then>
                   <f:else>
-                    <f:render partial="Links/Link" arguments="{_all}" />
+                    <f:render partial="Link/Link" arguments="{_all}" />
                   </f:else>
                 </f:if>
               </div>
