[TASK] update BigIconTextButton and IconTextButton CE-s, restructure header partials

--- a/Resources/Private/Partials/ContentElements/Link/ButtonLink.html
+++ b/Resources/Private/Partials/ContentElements/Link/ButtonLink.html
@@ -8,6 +8,7 @@
       button_size: data.button_size,
       button_style: data.button_style,
       link_position: data.link_position,
+      stretched_link : stretched_link,
       link: data.link}" />
   </f:if>
 
