--- a/Resources/Private/Partials/ContentElements/Link/ExternalLink.html
+++ b/Resources/Private/Partials/ContentElements/Link/ExternalLink.html
@@ -4,6 +4,7 @@
     <f:render partial="Link/Render/ExternalLink" arguments="{
       link_title: data.link_title,
       link_position: data.link_position,
+      stretched_link : stretched_link,
       link: data.link}" />
   </f:if>
 
