--- a/Resources/Private/Partials/ContentElements/Link/Render/ExternalLink.html
+++ b/Resources/Private/Partials/ContentElements/Link/Render/ExternalLink.html
@@ -6,7 +6,7 @@
 
   <f:if condition="{link_title}">
     <div class="external-link-partial__wrp {position}">
-      <f:link.external uri="{link}" class="external-link-partial" defaultScheme="https">
+      <f:link.external uri="{link}" class="external-link-partial {f:if(condition: stretched_link, then: ' stretched-link ')}" defaultScheme="https">
         {link_title}
       </f:link.external>
     </div>
