--- a/Resources/Private/Partials/ContentElements/Header/AllHeaderText.html
+++ b/Resources/Private/Partials/ContentElements/Header/AllHeaderText.html
@@ -1,12 +1,16 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
 <f:if condition="{data.header_layout} != 100">
-  <f:if condition="{data.header_text}">
+  <f:if condition="{data.header_text} || {data.subheader_text}">
       <f:render partial="Header/Render/HeaderText" arguments="{
         header_text: data.header_text,
         header_layout: data.header_layout,
         header_position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}',
         header_link: data.header_link}" />
+      <f:render partial="Header/Render/SubHeaderText" arguments="{
+        subheader_text: data.subheader_text,
+        header_layout: data.header_layout,
+        header_position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
   </f:if>
 </f:if>
 
