--- a/Resources/Private/Partials/ContentElements/Header/SubHeader.html
+++ b/Resources/Private/Partials/ContentElements/Header/SubHeader.html
@@ -1,37 +1,12 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-<f:if condition="{subheader}">
-  <f:switch expression="{layout}">
-    <f:case value="0">
-      <h2 class="{positionClass}">
-        {subheader}
-      </h2>
-    </f:case>
-    <f:case value="1">
-      <h3 class="{positionClass}">
-        {subheader}
-      </h3>
-    </f:case>
-    <f:case value="2">
-      <h4 class="{positionClass}">
-        {subheader}
-      </h4>
-    </f:case>
-    <f:case value="3">
-      <h5 class="{positionClass}">
-        {subheader}
-      </h5>
-    </f:case>
-    <f:case value="4">
-      <h6 class="{positionClass}">
-        {subheader}
-      </h6>
-    </f:case>
-    <f:case value="5">
-      <h6 class="{positionClass}">
-        <small>{subheader}</small>
-      </h6>
-    </f:case>
-  </f:switch>
+
+<f:if condition="{data.header_layout} != 100">
+  <f:if condition="{data.subheader}">
+      <f:render partial="Header/Render/SubHeader" arguments="{
+        subheader: data.subheader,
+        layout: data.header_layout,
+        positionClass: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
+  </f:if>
 </f:if>
 
 </html>
