--- a/Resources/Private/Templates/ContentElements/Static/BigIconTextButton.html
+++ b/Resources/Private/Templates/ContentElements/Static/BigIconTextButton.html
@@ -7,42 +7,47 @@
 <f:section name="Main">
 <!-- t3kit: Resources/Private/Templates/ContentElements/Static/BigIconTextButton.html [begin] -->
 
+  <f:if condition="{flexform.stretched_link}">
+    <f:variable name="stretched_link" value="1" />
+  </f:if>
+
   <div class="ce-big-icon-text-btn__wrp">
-    <div class="ce-big-icon-text-btn {f:if(condition: settings.disableWholeAreaLink, then: '', else: ' _whole-area-link')}">
+    <div class="ce-big-icon-text-btn">
+
       <f:if condition="{data.icon}">
-        <span class="ce-big-icon-text-btn__icon">
-          <t3kit:render.svg src="{data.icon}" class="{data.icon_class}" width="55px" height="55px" aria-hidden="true" />
+        <span class="ce-big-icon-text-btn__icon-wrp">
+          <t3kit:render.svg src="{data.icon}" class="t3icon ce-big-icon-text-btn__icon {data.icon_class}" />
         </span>
       </f:if>
 
       <f:if condition="{data.header}">
-        <h3 class="ce-big-icon-text-btn__header">
-          {data.header}
-        </h3>
+        <div class="ce-big-icon-text-btn__header">
+          <f:render partial="Header/Header" arguments="{_all}" />
+        </div>
       </f:if>
 
       <f:if condition="{data.bodytext}">
-        <p class="ce-big-icon-text-btn__p"><f:format.nl2br>{data.bodytext}</f:format.nl2br></p>
+        <p class="ce-big-icon-text-btn__bodytext"><f:format.nl2br>{data.bodytext}</f:format.nl2br></p>
       </f:if>
 
-      <f:if condition="{data.link} && {flexform.disableWholeAreaLink} == 1">
-        <f:link.typolink
-          parameter="{data.link}"
-          class="ce-big-icon-text-btn__link {f:if(condition: flexform.btnAsLink, then: 'btn-text', else: ' btn btn-primary')}">
-            {f:if(condition: data.link_title, then: data.link_title, else: data.header)}
-        </f:link.typolink>
+
+      <f:if condition="{data.link_title}">
+        <div class="ce-big-icon-text-btn__link">
+          <f:if condition="{data.link_as_button}">
+            <f:then>
+              <f:render partial="Link/ButtonLink" arguments="{_all}" />
+            </f:then>
+            <f:else>
+              <f:render partial="Link/Link" arguments="{_all}" />
+            </f:else>
+          </f:if>
+        </div>
       </f:if>
 
-      <f:if condition="{flexform.disableWholeAreaLink} == 0">
-          <f:link.typolink parameter="{data.link}" class="ce-big-icon-text-btn__link _whole-area-link stretched-link {f:if(condition: flexform.btnAsLink, then: 'btn-text', else: ' btn btn-primary')}">
-            {f:if(condition: data.link_title, then: data.link_title, else: data.header)}
-          </f:link.typolink>
-      </f:if>
     </div>
   </div>
 
 <!-- t3kit: Resources/Private/Templates/ContentElements/Static/BigIconTextButton.html [end] -->
 </f:section>
-
 
 </html>
